# qcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTENANCE.md  README.md  about.hbs  about.toml  build.rs  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cleanup.yml  release.yml
debian/: config  postinst  postrm  templates
misc/: .gitignore  20-qcp.conf  qcp.1  qcp.conf  qcp_config.5
qcp/: Cargo.toml  build.rs
qcp/schema/: control.capnp  session.capnp
qcp/src/: cert.rs  cli.rs  console.rs  lib.rs  main.rs  styles.rs  transport.rs  util.rs
qcp/src/cli/: cli_main.rs
qcp/src/client/: args.rs  main_loop.rs  mod.rs
qcp/src/os/: unix.rs
qcp/src/protocol/: control.rs  mod.rs  session.rs
qcp/src/server/: args.rs  main_loop.rs  mod.rs
qcp/src/util/: dns.rs  io.rs  mod.rs  socket.rs  stats.rs  time.rs  tracing.rs
qcpt/: Cargo.toml  build.rs
qcpt/src/: cert.rs  cli.rs  lib.rs  main.rs  styles.rs
qcpt/src/server/: cli.rs  eventloop.rs  message.rs  mod.rs
schema/: control.capnp  session.capnp
scripts/: install-ubuntu-packages  make-debian-package
src/: cert.rs  console.rs  lib.rs  main.rs  server.rs  styles.rs  transport.rs  version.rs
src/cli/: args.rs  cli_main.rs  mod.rs  styles.rs
src/client/: args.rs  control.rs  job.rs  main_loop.rs  meter.rs  mod.rs  options.rs  progress.rs  ssh.rs
src/config/: manager.rs  mod.rs  ssh.rs  structure.rs
src/config/ssh/: errors.rs  files.rs  includes.rs  lines.rs  matching.rs  values.rs
src/doc/: mod.rs  performance.rs  troubleshooting.rs
src/os/: mod.rs  unix.rs
src/protocol/: control.rs  control_capnp.rs  mod.rs  session.rs  session_capnp.rs
src/server/: main_loop.rs  mod.rs
src/util/: address_family.rs  cert.rs  cli.rs  dns.rs  humanu64.rs  io.rs  mod.rs  optionalify.rs  port_range.rs  socket.rs  stats.rs  time.rs  tracing.rs
