[package]
name = "qcp"
description = "QCP file copy utility"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
rust-version = "1.81.0"

[dependencies]
anstyle = "1.0.8"
anyhow = { workspace = true }
capnp = "0.19.7"
capnp-futures = "0.19.1"
clap = { workspace = true, features = ["wrap_help", "derive", "cargo", "help"] }
console = "0.15.8"
dns-lookup = "2.0.4"
futures-util = { version = "0.3.30", default-features = false, features = ["compat"] }
gethostname = "0.5.0"
human-repr = "1.1.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
quinn = "0.11.5"
rcgen = { version = "0.13.1", features = ["crypto", "pem", "ring"] }
rustls-pki-types = "1.8.0"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", default-features = true, features = ["full", "io-std", "io-util"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
built = { version = "0.7.4", features = ["git2"] }
capnpc = "0.19.0"

[dev-dependencies]
fastrand = "2.1.1"
