[package]
name = "qcpt"
description = "QCP transport low-level utility"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
rust-version = "1.76.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qcp = { path = "../qcp" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
